# news-ontology

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  health.py  news.py  nlp_processing.py
backend/app/core/: ontology_manager.py
backend/app/models/: __init__.py  nlp_models.py
backend/app/nlp/: ner_simulator.py  sinhala_pos_tagger.py
backend/data/: news_ontology_interactive.owl
backend/docs/: ontology.md
backend/training/: README.md  train_sinhala_pos_model.py
stanford-ner/: Dockerfile  NERServer.java
