[tool.poetry]
name = "news-ontology-backend"
version = "0.1.0"
description = "Backend API for the News Ontology project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
owlready2 = "^0.41"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"